[package]
name = "laserman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]

[dependencies]
bevy = "0.9.0"
bevy_rapier2d = {version="0.20.0", features=["serde-serialize", "serde"]}
serde = "1.0.147"
ron = "0.8.0"
bevy_common_assets = {version="0.4.0", features=["ron"]}
lyon_tessellation = "1.0.4"
spade = "2.0.0"
geo = "0.23.0"
bevy_egui = "0.19.0"